[project]
name = "payer-route-reconciliation"
version = "0.1.0"
description = "Prior authorization route reconciliation pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "anthropic>=0.18.0",
    "rich>=13.7.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
